--- a/BabyJava/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
+++ b/BabyJava/.settings/com.github.jknack.antlr4ide.Antlr4.prefs
@@ -1,5 +1,5 @@
-antlr4.antlrRegisteredTools=4.4@C\:\\Users\\DELL\\AppData\\Local\\Temp\\antlr-4.4-complete.jar\:null@C\:\\Users\\DELL\\Desktop\\antlr-4.5.3-complete.jar
-antlr4.antlrToolPath=C\:\\Users\\DELL\\Desktop\\antlr-4.5.3-complete.jar
+antlr4.antlrRegisteredTools=4.4@C\:\\Users\\YOUSUF~1\\AppData\\Local\\Temp\\antlr-4.4-complete.jar\:null@C\:\\Users\\yousuf-sap\\Downloads\\antlr-4.5.3-complete.jar
+antlr4.antlrToolPath=C\:\\Users\\yousuf-sap\\Downloads\\antlr-4.5.3-complete.jar
 antlr4.encoding=UTF-8
 antlr4.listener=true
 antlr4.visitor=false
